log de instalação.txt
Microsoft Windows [versão 10.0.15063]
(c) 2017 Microsoft Corporation. Todos os direitos reservados.

C:\Users\antonio>node -v
v8.2.1

C:\Users\antonio>npm install -g @angular/cli
C:\Users\antonio\AppData\Roaming\npm\ng -> C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\bin\ng

> node-sass@4.5.3 install C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\node_modules\node-sass
> node scripts/install.js

Downloading binary from https://github.com/sass/node-sass/releases/download/v4.5.3/win32-x64-57_binding.node
Download complete..] - :
Binary saved to C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\node_modules\node-sass\vendor\win32-x64-57\binding.node
Caching binary to C:\Users\antonio\AppData\Roaming\npm-cache\node-sass\4.5.3\win32-x64-57_binding.node

> uglifyjs-webpack-plugin@0.4.6 postinstall C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\node_modules\uglifyjs-webpack-plugin
> node lib/post_install.js


> node-sass@4.5.3 postinstall C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\node_modules\node-sass
> node scripts/build.js

Binary found at C:\Users\antonio\AppData\Roaming\npm\node_modules\@angular\cli\node_modules\node-sass\vendor\win32-x64-57\binding.node
Testing binary
Binary is fine
npm WARN extract-text-webpack-plugin@2.1.2 requires a peer of webpack@^2.2.0 but none was installed.
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: fsevents@1.1.2 (node_modules\@angular\cli\node_modules\fsevents):
npm WARN notsup SKIPPING OPTIONAL DEPENDENCY: Unsupported platform for fsevents@1.1.2: wanted {"os":"darwin","arch":"any"} (current: {"os":"win32","arch":"x64"})

+ @angular/cli@1.2.2
added 890 packages in 91.24s

C:\Users\antonio>ng -v
    _                      _                 ____ _     ___
   / \   _ __   __ _ _   _| | __ _ _ __     / ___| |   |_ _|
  / ? \ | '_ \ / _` | | | | |/ _` | '__|   | |   | |    | |
 / ___ \| | | | (_| | |_| | | (_| | |      | |___| |___ | |
/_/   \_\_| |_|\__, |\__,_|_|\__,_|_|       \____|_____|___|
               |___/
@angular/cli: 1.2.2
node: 8.2.1
os: win32 x64

C:\Users\antonio>cd C:\Users\antonio\Desktop\CURSO COD3R

C:\Users\antonio\Desktop\CURSO COD3R>npm install typescript -g
C:\Users\antonio\AppData\Roaming\npm\tsc -> C:\Users\antonio\AppData\Roaming\npm\node_modules\typescript\bin\tsc
C:\Users\antonio\AppData\Roaming\npm\tsserver -> C:\Users\antonio\AppData\Roaming\npm\node_modules\typescript\bin\tsserver
+ typescript@2.4.2
added 1 package in 2.956s

C:\Users\antonio\Desktop\CURSO COD3R>tsc -v
Version 2.4.2

C:\Users\antonio\Desktop\CURSO COD3R>tsc app.ts
error TS6053: File 'app.ts' not found.

C:\Users\antonio\Desktop\CURSO COD3R>cd typescript

C:\Users\antonio\Desktop\CURSO COD3R\typescript>tsc app.ts

C:\Users\antonio\Desktop\CURSO COD3R\typescript>tsc -w
09:44:10 - Compilation complete. Watching for file changes.


09:45:37 - File change detected. Starting incremental compilation...


09:45:37 - Compilation complete. Watching for file changes.

Windows PowerShell
Copyright (C) 2016 Microsoft Corporation. Todos os direitos reservados.

PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> ls


    Diretório: C:\Users\antonio\Desktop\CURSO COD3R\typescript


Mode                LastWriteTime         Length Name
----                -------------         ------ ----
-a----       24/07/2017     15:56           1297 app.js
-a----       24/07/2017     15:55           1240 app.ts
-a----       24/07/2017     15:56            360 base-ships.js
-a----       24/07/2017     15:51            262 base-ships.ts
-a----       24/07/2017     15:56           1210 starfighter.js
-a----       24/07/2017     15:55            509 starfighter.ts
-a----       21/07/2017     17:37             90 tsconfig.json


PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> npm init -f
npm WARN using --force I sure hope you know what you are doing.
Wrote to C:\Users\antonio\Desktop\CURSO COD3R\typescript\package.json:

{
  "name": "typescript",
  "version": "1.0.0",
  "description": "",
  "main": "app.js",
  "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1"
  },
  "keywords": [],
  "author": "",
  "license": "ISC"
}


PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> npm install --save lodash@4.14
npm notice created a lockfile as package-lock.json. You should commit this file.
npm WARN typescript@1.0.0 No description
npm WARN typescript@1.0.0 No repository field.

+ lodash@4.14.2
added 1 package in 5.74s
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> npm install --save-dev @types/lodash@4.14
npm WARN typescript@1.0.0 No description
npm WARN typescript@1.0.0 No repository field.

+ @types/lodash@4.14.71
added 1 package in 5.889s
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> tsc app.ts
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> node app
===========Typescript Events============
Entering hyperspace with hyperdrive
Entering hyperspace with hyperdrive
Is falcon good for the job?Yes
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> node app
===========Typescript Events============
Entering hyperspace with hyperdrive
Entering hyperspace with hyperdrive
Is falcon good for the job?Yes
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> tsc app.ts
app.ts(39,40): error TS2345: Argument of type '"40"' is not assignable to parameter of type 'number'.
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> tsc app.ts
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> node app
===========Typescript Events============
Entering hyperspace with hyperdrive
Entering hyperspace with hyperdrive
Is falcon good for the job?Yes
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> ng new jedi-academy --prefix=jad
Unable to find "@angular/cli" in devDependencies.

Please take the following steps to avoid issues:
"npm install --save-dev @angular/cli@latest"

installing ng
  create .editorconfig
  create README.md
  create src\app\app.component.css
  create src\app\app.component.html
  create src\app\app.component.spec.ts
  create src\app\app.component.ts
  create src\app\app.module.ts
  create src\assets\.gitkeep
  create src\environments\environment.prod.ts
  create src\environments\environment.ts
  create src\favicon.ico
  create src\index.html
  create src\main.ts
  create src\polyfills.ts
  create src\styles.css
  create src\test.ts
  create src\tsconfig.app.json
  create src\tsconfig.spec.json
  create src\typings.d.ts
  create .angular-cli.json
  create e2e\app.e2e-spec.ts
  create e2e\app.po.ts
  create e2e\tsconfig.e2e.json
  create .gitignore
  create karma.conf.js
  create package.json
  create protractor.conf.js
  create tsconfig.json
  create tslint.json
Installing packages for tooling via npm.
Installed packages for tooling via npm.
Successfully initialized git.
Project 'jedi-academy' successfully created.
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript> cd jedi-academy
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript\jedi-academy> ls


    Diretório: C:\Users\antonio\Desktop\CURSO COD3R\typescript\jedi-academy


Mode                LastWriteTime         Length Name
----                -------------         ------ ----
d-----       25/07/2017     11:56                e2e
d-----       25/07/2017     11:58                node_modules
d-----       25/07/2017     11:56                src
-a----       25/07/2017     11:56           1247 .angular-cli.json
-a----       25/07/2017     11:56            245 .editorconfig
-a----       25/07/2017     11:56            516 .gitignore
-a----       25/07/2017     11:56            924 karma.conf.js
-a----       25/07/2017     11:58         280726 package-lock.json
-a----       25/07/2017     11:56           1317 package.json
-a----       25/07/2017     11:56            722 protractor.conf.js
-a----       25/07/2017     11:56           1081 README.md
-a----       25/07/2017     11:56            363 tsconfig.json
-a----       25/07/2017     11:56           3040 tslint.json


PS C:\Users\antonio\Desktop\CURSO COD3R\typescript\jedi-academy> ng-serve
ng-serve : O termo 'ng-serve' não é reconhecido como nome de cmdlet, função, arquivo de script ou programa operável. Verifique a grafia do
nome ou, se um caminho tiver sido incluído, veja se o caminho está correto e tente novamente.
No linha:1 caractere:1
+ ng-serve
+ ~~~~~~~~
    + CategoryInfo          : ObjectNotFound: (ng-serve:String) [], CommandNotFoundException
    + FullyQualifiedErrorId : CommandNotFoundException

PS C:\Users\antonio\Desktop\CURSO COD3R\typescript\jedi-academy> ng serve
** NG Live Development Server is listening on localhost:4200, open your browser on http://localhost:4200 **
Hash: 04cc4ce7d3f54b3bf9df
Time: 11549ms
chunk    {0} polyfills.bundle.js, polyfills.bundle.js.map (polyfills) 177 kB {4} [initial] [rendered]
chunk    {1} main.bundle.js, main.bundle.js.map (main) 5.34 kB {3} [initial] [rendered]
chunk    {2} styles.bundle.js, styles.bundle.js.map (styles) 10.5 kB {4} [initial] [rendered]
chunk    {3} vendor.bundle.js, vendor.bundle.js.map (vendor) 2.19 MB [initial] [rendered]
chunk    {4} inline.bundle.js, inline.bundle.js.map (inline) 0 bytes [entry] [rendered]
webpack: Compiled successfully.
^CDeseja finalizar o arquivo em lotes (S/N)? n
PS C:\Users\antonio\Desktop\CURSO COD3R\typescript\jedi-academy>


